--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </div>
     </main>
     <footer>
-      <p>© 2024 CI/CD Demo - Prezentacija za profesora Drljacu</p>
+      <p>© 2024 CI/CD Demo - Prezentacija za profesora Drljacu.</p>
     </footer>
   </body>
 </html>
