--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <p>
           Napravite promene u kodu i gledajte kako se automatski deploy-uje!
         </p>
-        <p>Mini azuriranje</p>
+        <p>Mini azuriranje 2</p>
       </div>
     </main>
     <footer>
