--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   </head>
   <body>
     <header>
-      <h1>CI/CD Demo 2 JENKINS</h1>
+      <h1>CI/CD Demo</h1>
       <p>Automatizacija razvoja i isporuke softvera</p>
     </header>
     <main>
