--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   </head>
   <body>
     <header>
-      <h1>CI/CD Demo 2</h1>
+      <h1>CI/CD Demo</h1>
       <p>Automatizacija razvoja i isporuke softvera</p>
     </header>
     <main>
@@ -71,7 +71,7 @@
         <p>
           Napravite promene u kodu i gledajte kako se automatski deploy-uje!
         </p>
-        <p>Mini azuriranje 44</p>
+        <p>Mini azuriranje 13</p>
       </div>
     </main>
     <footer>
@@ -79,4 +79,4 @@
     </footer>
   </body>
 </html>
-Updated CI/CD process
+Test update
