--- a/index.html
+++ b/index.html
@@ -69,14 +69,13 @@
           GitHub Pages.
         </p>
         <p>
-          Napravite promene u kodu i gledajte kako se automatski deploy-uje!
+          Napravite promjene u kodu i gledajte kako se automatski deploy-uje!
         </p>
         <p>Mini azuriranje 13</p>
       </div>
     </main>
     <footer>
-      <p>© 2024 CI/CD Demo - Prezentacija za profesora Sasau Bundalu.</p>
+      <p>© 2024 CI/CD Demo</p>
     </footer>
   </body>
 </html>
-Test update
